--- a/app/views/web/ost/winners/_poc_videos.erb
+++ b/app/views/web/ost/winners/_poc_videos.erb
@@ -11,7 +11,8 @@
           <div class="col-12 col-md-6 col-lg-4 mb-4">
           <div class="poc_card">
           <div class="video-wrapper">
-            <button type="button" class="font-weight-light btn video-btn h-100 w-100" data-toggle="modal" data-src="{{video_embed}}" data-target="#helpVideoModal">
+            <button type="button" class="font-weight-light btn video-btn h-100 w-100" data-toggle="modal"
+                    data-src="{{video_embed}}" data-target="#helpVideoModal">
             <span class="play-icon">
               <svg class="icon-play align-middle">
                 <switch>
@@ -55,81 +56,97 @@
 
 <% content_for :end_js do %>
   <script type="text/javascript">
-      winner.carousel.init(
+    $(function () {
 
-          [
-              {
-                  title: "Simple Token is hiring",
-                  video_embed: "https://www.youtube.com/embed/9-HLoYrQK4g?rel=0&autoplay=1",
-                  image: "https://img.youtube.com/vi/9-HLoYrQK4g/maxresdefault.jpg",
-                  date: "5 Jan 2018",
-              },
-              {
-                  title: "Live End-to-End Demo of Simple Token OpenST Implementation",
-                  video_embed: "https://www.youtube.com/embed/-SxJ8c1Xh_A?rel=0&autoplay=1",
-                  image: "https://img.youtube.com/vi/-SxJ8c1Xh_A/maxresdefault.jpg",
-                  date: "8 Nov 2017",
-              },
-              {
-                  title: "Simple Token founder Jason Goldberg keynotes the World Blockchain Forum",
-                  video_embed: "https://www.youtube.com/embed/mEleBd9b8gA?rel=0&autoplay=1",
-                  image: "https://img.youtube.com/vi/mEleBd9b8gA/maxresdefault.jpg",
-                  date: "3 Nov 2017",
-              },
-              {
-                  title: "OpenST Protocol and Platform Released to the Public under Open-Source Licenses",
-                  video_embed: "https://www.youtube.com/embed/ZBcVAH1yAZ0?rel=0&autoplay=1",
-                  image: "https://img.youtube.com/vi/ZBcVAH1yAZ0/maxresdefault.jpg",
-                  date: "28 Oct 2017",
-              },
-              {
-                  title: "Simple Token Finalizes Token Sale Price, Launches 'Proof of Support' Program, Announces Advisors",
-                  video_embed: "https://www.youtube.com/embed/9OP7Q8uzjjg?rel=0&autoplay=1",
-                  image: "https://img.youtube.com/vi/9OP7Q8uzjjg/maxresdefault.jpg",
-                  date: "25 Oct 2017",
-              },
-              {
-                  title: "Simple Token Technical Talk: Blockchain & Side-Chain Process",
-                  video_embed: "https://www.youtube.com/embed/W8iedA2dQKs?rel=0&autoplay=1",
-                  image: "https://img.youtube.com/vi/W8iedA2dQKs/maxresdefault.jpg",
-                  date: "23 Oct 2017",
-              },
-              {
-                  title: "Simple Token Technical Talk: Blockchain & Side-Chain Process",
-                  video_embed: "https://www.youtube.com/embed/D4z13HqRjFU?rel=0&autoplay=1",
-                  image: "https://img.youtube.com/vi/D4z13HqRjFU/maxresdefault.jpg",
-                  date: "23 Oct 2017",
-              },
-              {
-                  title: "Epicenter - Bringing Tokens to Mainstream Consumer Applications",
-                  video_embed: "https://www.youtube.com/embed/c8swtDtappM?rel=0&autoplay=1",
-                  image: "https://img.youtube.com/vi/c8swtDtappM/maxresdefault.jpg",
-                  date: "11 Oct 2017",
-              },
-              {
-                  title: "Jason Goldberg intros Simple Token for apps to launch branded crytpo tokens",
-                  video_embed: "https://www.youtube.com/embed/7aY5R1yXhwA?rel=0&autoplay=1",
-                  image: "https://img.youtube.com/vi/7aY5R1yXhwA/maxresdefault.jpg",
-                  date: "3 Oct 2017",
-              },
-              {
-                  title: "CEO Jason Goldberg at Immutable Blockchain Summit",
-                  video_embed: "https://www.youtube.com/embed/qz8LhpKCsw0?rel=0&autoplay=1",
-                  image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/simple-token-video-poster-qz8LhpKCsw0.png",
-                  date: "26 Sep 2017",
-              },
-              {
-                  title: "Simple Token CEO Jason Goldberg @ Immutable Blockchain Summit 2017, Hong Kong",
-                  video_embed: "https://www.youtube.com/embed/qz8LhpKCsw0?rel=0&autoplay=1",
-                  image: "https://img.youtube.com/vi/qz8LhpKCsw0/maxresdefault.jpg",
-                  date: "26 Sep 2017",
-              },
-          ]
+      Handlebars.registerHelper('ifImage', function (image, options) {
+        if (image) {
+          return options.fn(this);
+        } else {
+          return options.inverse(this);
+        }
+      });
+
+      Handlebars.registerHelper('ifVideo', function (video, article_link, options) {
+        if (video && !article_link) {
+          return options.fn(this);
+        } else {
+          return options.inverse(this);
+        }
+      });
 
 
+      ost.winner.poc_videos.init(
+        [
+          {
+            title: "Simple Token is hiring",
+            video_embed: "https://www.youtube.com/embed/9-HLoYrQK4g?rel=0&autoplay=1",
+            image: "https://img.youtube.com/vi/9-HLoYrQK4g/maxresdefault.jpg",
+            date: "5 Jan 2018",
+          },
+          {
+            title: "Live End-to-End Demo of Simple Token OpenST Implementation",
+            video_embed: "https://www.youtube.com/embed/-SxJ8c1Xh_A?rel=0&autoplay=1",
+            image: "https://img.youtube.com/vi/-SxJ8c1Xh_A/maxresdefault.jpg",
+            date: "8 Nov 2017",
+          },
+          {
+            title: "Simple Token founder Jason Goldberg keynotes the World Blockchain Forum",
+            video_embed: "https://www.youtube.com/embed/mEleBd9b8gA?rel=0&autoplay=1",
+            image: "https://img.youtube.com/vi/mEleBd9b8gA/maxresdefault.jpg",
+            date: "3 Nov 2017",
+          },
+          {
+            title: "OpenST Protocol and Platform Released to the Public under Open-Source Licenses",
+            video_embed: "https://www.youtube.com/embed/ZBcVAH1yAZ0?rel=0&autoplay=1",
+            image: "https://img.youtube.com/vi/ZBcVAH1yAZ0/maxresdefault.jpg",
+            date: "28 Oct 2017",
+          },
+          {
+            title: "Simple Token Finalizes Token Sale Price, Launches 'Proof of Support' Program, Announces Advisors",
+            video_embed: "https://www.youtube.com/embed/9OP7Q8uzjjg?rel=0&autoplay=1",
+            image: "https://img.youtube.com/vi/9OP7Q8uzjjg/maxresdefault.jpg",
+            date: "25 Oct 2017",
+          },
+          {
+            title: "Simple Token Technical Talk: Blockchain & Side-Chain Process",
+            video_embed: "https://www.youtube.com/embed/W8iedA2dQKs?rel=0&autoplay=1",
+            image: "https://img.youtube.com/vi/W8iedA2dQKs/maxresdefault.jpg",
+            date: "23 Oct 2017",
+          },
+          {
+            title: "Simple Token Technical Talk: Blockchain & Side-Chain Process",
+            video_embed: "https://www.youtube.com/embed/D4z13HqRjFU?rel=0&autoplay=1",
+            image: "https://img.youtube.com/vi/D4z13HqRjFU/maxresdefault.jpg",
+            date: "23 Oct 2017",
+          },
+          {
+            title: "Epicenter - Bringing Tokens to Mainstream Consumer Applications",
+            video_embed: "https://www.youtube.com/embed/c8swtDtappM?rel=0&autoplay=1",
+            image: "https://img.youtube.com/vi/c8swtDtappM/maxresdefault.jpg",
+            date: "11 Oct 2017",
+          },
+          {
+            title: "Jason Goldberg intros Simple Token for apps to launch branded crytpo tokens",
+            video_embed: "https://www.youtube.com/embed/7aY5R1yXhwA?rel=0&autoplay=1",
+            image: "https://img.youtube.com/vi/7aY5R1yXhwA/maxresdefault.jpg",
+            date: "3 Oct 2017",
+          },
+          {
+            title: "CEO Jason Goldberg at Immutable Blockchain Summit",
+            video_embed: "https://www.youtube.com/embed/qz8LhpKCsw0?rel=0&autoplay=1",
+            image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/simple-token-video-poster-qz8LhpKCsw0.png",
+            date: "26 Sep 2017",
+          },
+          {
+            title: "Simple Token CEO Jason Goldberg @ Immutable Blockchain Summit 2017, Hong Kong",
+            video_embed: "https://www.youtube.com/embed/qz8LhpKCsw0?rel=0&autoplay=1",
+            image: "https://img.youtube.com/vi/qz8LhpKCsw0/maxresdefault.jpg",
+            date: "26 Sep 2017",
+          },
+        ]
+      );
 
-
-      )
+    });
   </script>
 
 <%end%>
