--- a/app/views/web/ost/winners/_poc_videos.erb
+++ b/app/views/web/ost/winners/_poc_videos.erb
@@ -81,7 +81,7 @@
         [
           {
             title: "Simple Token is hiring",
-            video_embed: "https://www.youtube.com/embed/9-HLoYrQK4g?rel=0&autoplay=1",
+            video_embed: "https://www.youtube.com/embed/9-HLoYrQK4g",
             image: "https://img.youtube.com/vi/9-HLoYrQK4g/maxresdefault.jpg",
             date: "5 Jan 2018",
           },
