--- a/app/views/web/ost/winners/_poc_videos.erb
+++ b/app/views/web/ost/winners/_poc_videos.erb
@@ -8,7 +8,7 @@
 
         <script id= "poc_videos" type="text/x-handlebars-template">
           {{#ifVideo video_embed article_link}}
-          <div class="col-12 col-md-6 col-lg-4 mb-4">
+          <div class="col-12 col-sm-6 col-lg-4 mb-4">
           <div class="poc_card">
           <div class="video-wrapper">
             <button type="button" class="font-weight-light btn video-btn h-100 w-100" data-toggle="modal"
