--- a/app/views/web/ost/winners/_poc_videos.erb
+++ b/app/views/web/ost/winners/_poc_videos.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="container">
       <div class="col-12 text-center my-5">
-        <h3 class="poc_header">All Successful POCs</h3>
+        <h3 class="poc_header">More Successful POCs</h3>
       </div>
       <div id="poc_video_wrapper" class="row">
 
