--- a/app/views/web/ost/winners/_poc_videos.erb
+++ b/app/views/web/ost/winners/_poc_videos.erb
@@ -440,6 +440,12 @@
             "project_url": "https://github.com/realJayNay/ost-kit-loyalty-tokens",
             "video_embed": "https://www.youtube.com/embed/zEVhb6KUUVc",
             "image": "https://img.youtube.com/vi/zEVhb6KUUVc/maxresdefault.jpg"
+          },
+          {
+            "title": "Facebook Chatbot Tokenization Proof of Concept",
+            "project_url": "https://www.cointossbot.com/",
+            "video_embed": "https://www.youtube.com/embed/q8XmchNSTsY",
+            "image": "https://img.youtube.com/vi/q8XmchNSTsY/maxresdefault.jpg"
           }
         ]
       );
