--- a/app/assets/stylesheets/web/ost/alpha3winners/poc_videos.scss
+++ b/app/assets/stylesheets/web/ost/alpha3winners/poc_videos.scss
@@ -9,7 +9,7 @@
 
     .video-wrapper {
       position: relative;
-      display: inline-block;
+//      display: inline-block;
 
       .video-btn {
         position: absolute;
