--- a/app/views/web/ost/alpha3winners/_poc_videos.erb
+++ b/app/views/web/ost/alpha3winners/_poc_videos.erb
@@ -23,7 +23,7 @@
           </button>
           {{#ifImage image}}
           <div class="img-wrapper">
-          <img class="img-fluid" src="{{image}}" alt="image"/>
+          <img class="img-fluid mx-auto d-block" src="{{image}}" alt="image"/>
           </div>
           {{/ifImage}}
           </div>
@@ -91,7 +91,7 @@
             "title": "Cryptonom",
             "project_url": "https://medium.com/@collectcryptonom/ost-alpha-iii-final-poc-blog-post-cryptonom-8583f8810ae8",
             "video_embed": "https://www.youtube.com/embed/pdBa2AHaWJY",
-            "image": "https://img.youtube.com/vi/pdBa2AHaWJY/maxresdefault.jpg"
+            "image": "https://img.youtube.com/vi/pdBa2AHaWJY/mqdefault.jpg"
           },
           {
             "title": "AskAnExpert",
@@ -103,13 +103,13 @@
             "title": "Social Heartbeat",
             "project_url": "https://steemit.com/cryptocurrency/@embutv/social-heartbeat-final-blog-post-and-poc-for-the-ost-kit-alpha-iii-phase-embedded-wallet-lite-developer-challenge",
             "video_embed": "https://www.youtube.com/embed/KiY_EBf4EYw",
-            "image": "https://img.youtube.com/vi/KiY_EBf4EYw/maxresdefault.jpg"
+            "image": "https://img.youtube.com/vi/KiY_EBf4EYw/mqdefault.jpg"
           },
           {
             "title": "Coner",
             "project_url": "https://medium.com/@danielvlieg/coner-ost-alpha-phase-iii-final-blog-28a55ccb24c4",
             "video_embed": "https://www.youtube.com/embed/OTlnsirrbac",
-            "image": "https://img.youtube.com/vi/OTlnsirrbac/maxresdefault.jpg"
+            "image": "https://img.youtube.com/vi/OTlnsirrbac/mqdefault.jpg"
           },
           {
             "title": "Dime Photo",
@@ -145,7 +145,7 @@
             "title": "KARPARC",
             "project_url": "https://medium.com/@waliazizganatra/karparc-ost-kit-alpha-phase-iii-final-16c9398c4765",
             "video_embed": "https://www.youtube.com/embed/GCzpxvUm320",
-            "image": "https://img.youtube.com/vi/GCzpxvUm320/maxresdefault.jpg"
+            "image": "https://img.youtube.com/vi/GCzpxvUm320/mqdefault.jpg"
           },
           {
             "title": "µtask",
@@ -157,7 +157,7 @@
             "title": "Kess",
             "project_url": "https://medium.com/@mardf/ost-kit-alpha-phase-iii-final-blog-post-on-kess-9ba6b7769eb9",
             "video_embed": "https://www.youtube.com/embed/d8kGf1a3IdA",
-            "image": "https://img.youtube.com/vi/d8kGf1a3IdA/maxresdefault.jpg"
+            "image": "https://img.youtube.com/vi/d8kGf1a3IdA/mqdefault.jpg"
           },
           {
             "title": "Tribunity",
@@ -175,7 +175,7 @@
             "title": "Chefmondo",
             "project_url": "https://medium.com/@ben.robertson_83730/chefmondo-ost-alpha-poc-conclusion-6c179b7b7e82",
             "video_embed": "https://www.youtube.com/embed/G1qtRDKsrlc",
-            "image": "https://img.youtube.com/vi/G1qtRDKsrlc/maxresdefault.jpg"
+            "image": "https://img.youtube.com/vi/G1qtRDKsrlc/mqdefault.jpg"
           },
           {
             "title": "Surwei",
@@ -193,7 +193,7 @@
             "title": "Hooray Coin - Scenarios for Business Use Cases",
             "project_url": "https://medium.com/@hooraycoin/hooray-coin-scenarios-for-business-use-cases-ost-kit-alpha-iii-poc-final-update-58df205dd322",
             "video_embed": "https://www.youtube.com/embed/iv6qq2xJ5Ts",
-            "image": "https://img.youtube.com/vi/iv6qq2xJ5Ts/maxresdefault.jpg"
+            "image": "https://img.youtube.com/vi/iv6qq2xJ5Ts/mqdefault.jpg"
           },
           {
             "title": "WoodToken",
@@ -244,12 +244,6 @@
             "image": "https://img.youtube.com/vi/k-jWz6RFhAE/maxresdefault.jpg"
           },
           {
-            "title": "Social Heartbeat",
-            "project_url": "https://steemit.com/cryptocurrency/@embutv/social-heartbeat-final-blog-post-and-poc-for-the-ost-kit-alpha-iii-phase-embedded-wallet-lite-developer-challenge",
-            "video_embed": "https://www.youtube.com/embed/KiY_EBf4EYw",
-            "image": "https://img.youtube.com/vi/KiY_EBf4EYw/maxresdefault.jpg"
-          },
-          {
             "title": "Coffee Circles",
             "project_url": "https://medium.com/@coffeecircles/ost-kit-alpha-iii-coming-full-circle-8dea34394994",
             "video_embed": "https://www.youtube.com/embed/g_mS5b79ZA8",
@@ -259,13 +253,7 @@
             "title": "LightworkerMD Network",
             "project_url": "http://blockchainfreshmd.blogspot.com/",
             "video_embed": "https://www.youtube.com/embed/N3olMsYsEtc",
-            "image": "https://img.youtube.com/vi/N3olMsYsEtc/maxresdefault.jpg"
-          },
-          {
-            "title": "Pacman Challenge",
-            "project_url": "https://medium.com/@pacmanchallenge/ost-kit-alpha-phase-iii-weekly-update-4-donezo-well-sort-of-41d329c407f3",
-            "video_embed": "https://www.youtube.com/embed/P7P8wqQC6WM",
-            "image": "https://img.youtube.com/vi/P7P8wqQC6WM/maxresdefault.jpg"
+            "image": "https://img.youtube.com/vi/N3olMsYsEtc/mqdefault.jpg"
           },
           {
             "title": "Sahaayam Scholarships (SCH)",
@@ -276,8 +264,8 @@
           {
             "title": "yogasqnc.com",
             "project_url": "https://medium.com/@yogasqnc/ost-alpha-phase-iii-final-update-d780740a6dbb",
-            "video_embed": "https://www.youtube.com/embed/tlf_w4calBs ",
-            "image": "https://img.youtube.com/vi/tlf_w4calBs /maxresdefault.jpg"
+            "video_embed": "https://www.youtube.com/embed/tlf_w4calBs",
+            "image": "https://img.youtube.com/vi/tlf_w4calBs/mqdefault.jpg"
           },
           {
             "title": "Auction World (AUC)",
@@ -289,7 +277,7 @@
             "title": "MemberToken",
             "project_url": "https://medium.com/@julian.j/final-update-membertoken-ost-kit-alpha-iii-18fd5b9b813a",
             "video_embed": "https://www.youtube.com/embed/yudXOusad6g",
-            "image": "https://img.youtube.com/vi/yudXOusad6g/maxresdefault.jpg"
+            "image": "https://img.youtube.com/vi/yudXOusad6g/mqdefault.jpg"
           },
           {
             "title": "VIRAL ME (VRM)",
@@ -313,7 +301,7 @@
             "title": "Hoola Quiz app",
             "project_url": "https://medium.com/@rich_80403/hoola-quiz-ost-kit-alpha-iii-poc-c95477c6dbc1",
             "video_embed": "https://www.youtube.com/embed/iXFE0Rlx_4I",
-            "image": "https://img.youtube.com/vi/iXFE0Rlx_4I/maxresdefault.jpg"
+            "image": "https://img.youtube.com/vi/iXFE0Rlx_4I/mqdefault.jpg"
           },
           {
             "title": "JoyPass",
@@ -334,7 +322,7 @@
             "image": "https://img.youtube.com/vi/ovHFY2c5QKk/maxresdefault.jpg"
           },
           {
-            "title": "OST &amp; uPort integration",
+            "title": "OST & uPort integration",
             "project_url": "http://josephschiarizzi.com/2018/08/OST-hackathon-Finale/",
             "video_embed": "https://www.youtube.com/embed/se558olXegc",
             "image": "https://img.youtube.com/vi/se558olXegc/maxresdefault.jpg"
@@ -361,7 +349,7 @@
             "title": "OpenTrivia.io",
             "project_url": "https://medium.com/@patluvsblockchain/double-blockchain-dapp-experiment-96f2ac12dc8d",
             "video_embed": "https://www.youtube.com/embed/IBa7y3bS_rc",
-            "image": "https://img.youtube.com/vi/IBa7y3bS_rc/maxresdefault.jpg"
+            "image": "https://img.youtube.com/vi/IBa7y3bS_rc/mqdefault.jpg"
           },
           {
             "title": "Friendio",
@@ -487,19 +475,13 @@
             "title": "PetFriend",
             "project_url": "https://medium.com/@choravivek/petfriend-osta3-final-update-bf7dac0157bc",
             "video_embed": "https://www.youtube.com/embed/SUY4L0SDFlI",
-            "image": "https://img.youtube.com/vi/SUY4L0SDFlI/maxresdefault.jpg"
+            "image": "https://img.youtube.com/vi/SUY4L0SDFlI/mqdefault.jpg"
           },
           {
             "title": "Beehive Travel",
             "project_url": "https://medium.com/@alvin_87403/beehive-travel-wraps-up-ost-alpha-challenge-3-weekly-update-4-ebf03658f85e",
             "video_embed": "https://www.youtube.com/embed/7DeOz1qHScw",
             "image": "https://img.youtube.com/vi/7DeOz1qHScw/maxresdefault.jpg"
-          },
-          {
-            "title": "Dime Photo",
-            "project_url": "https://medium.com/@aoxborrow/dime-photo-ost-kit%CE%B1-phase-iii-final-2bb49ace1870",
-            "video_embed": "https://www.youtube.com/embed/VIYlnwECrhQ",
-            "image": "https://img.youtube.com/vi/VIYlnwECrhQ/maxresdefault.jpg"
           },
           {
             "title": "Facebook Messenger Chatbot OST Integration",
@@ -517,7 +499,7 @@
             "title": "Social Crowd Fund",
             "project_url": "https://medium.com/@HoneyThakuria/social-crowd-fund-ost-challenge-final-blog-23363af31d00",
             "video_embed": "https://www.youtube.com/embed/3dzkrYKWLCk",
-            "image": "https://img.youtube.com/vi/3dzkrYKWLCk/maxresdefault.jpg"
+            "image": "https://img.youtube.com/vi/3dzkrYKWLCk/mqdefault.jpg"
           },
           {
             "title": "Employees Loyalty Program - QPAXX Solutions",
@@ -565,7 +547,7 @@
             "title": "Teletip",
             "project_url": "https://medium.com/@prasannadhavale.competitions/ost-kit-%CE%B1-phase-iii-final-blogpost-weekly-update-four-8b9d6d6375c2",
             "video_embed": "https://www.youtube.com/embed/PsEsxrYYUeM",
-            "image": "https://img.youtube.com/vi/PsEsxrYYUeM/maxresdefault.jpg"
+            "image": "https://img.youtube.com/vi/PsEsxrYYUeM/mqdefault.jpg"
           }
         ]
       );
