poc videos update

--- a/app/views/web/ost/alpha3winners/_poc_videos.erb
+++ b/app/views/web/ost/alpha3winners/_poc_videos.erb
@@ -142,12 +142,6 @@
             "image": "https://img.youtube.com/vi/hKHgBVwb5JE/maxresdefault.jpg"
           },
           {
-            "title": "KARPARC",
-            "project_url": "https://medium.com/@waliazizganatra/karparc-ost-kit-alpha-phase-iii-final-16c9398c4765",
-            "video_embed": "https://www.youtube.com/embed/GCzpxvUm320",
-            "image": "https://img.youtube.com/vi/GCzpxvUm320/mqdefault.jpg"
-          },
-          {
             "title": "µtask",
             "project_url": "https://medium.com/@floris.list/utask-the-last-sprint-98910e4e901b",
             "video_embed": "https://www.youtube.com/embed/4VLcTWEquXI",
@@ -176,12 +170,6 @@
             "project_url": "https://medium.com/@ben.robertson_83730/chefmondo-ost-alpha-poc-conclusion-6c179b7b7e82",
             "video_embed": "https://www.youtube.com/embed/G1qtRDKsrlc",
             "image": "https://img.youtube.com/vi/G1qtRDKsrlc/mqdefault.jpg"
-          },
-          {
-            "title": "Surwei",
-            "project_url": "https://medium.com/surwei/ost-3-final-post-surwei-3980715fed16",
-            "video_embed": "https://www.youtube.com/embed/_xpIWQgh33k",
-            "image": "https://img.youtube.com/vi/_xpIWQgh33k/maxresdefault.jpg"
           },
           {
             "title": "Swiftab",
@@ -224,12 +212,6 @@
             "project_url": "https://medium.com/@naidughusai/university-token-blog-4-final-update-in-osta3-challenge-f8a04c908582",
             "video_embed": "https://www.youtube.com/embed/j6SffC_VIAs",
             "image": "https://img.youtube.com/vi/j6SffC_VIAs/maxresdefault.jpg"
-          },
-          {
-            "title": "kidtoken",
-            "project_url": "https://medium.com/@ostkidtoken/kidtoken-ost-alpha-iii-final-video-and-blog-a40af79221fc",
-            "video_embed": "https://www.youtube.com/embed/wenTfSmHR6Y",
-            "image": "https://img.youtube.com/vi/wenTfSmHR6Y/maxresdefault.jpg"
           },
           {
             "title": "Treasure Coin",
@@ -304,12 +286,6 @@
             "image": "https://img.youtube.com/vi/iXFE0Rlx_4I/mqdefault.jpg"
           },
           {
-            "title": "JoyPass",
-            "project_url": "https://medium.com/joypass/joypass-osta3-challenge-completed-9f5dfe89f296",
-            "video_embed": "https://www.youtube.com/embed/Uub04jXSzfs",
-            "image": "https://img.youtube.com/vi/Uub04jXSzfs/maxresdefault.jpg"
-          },
-          {
             "title": "Chattify",
             "project_url": "https://medium.com/@tom.arthur/simple-token-ost-alpha-iii-chattify-79dceedc9077",
             "video_embed": "https://www.youtube.com/embed/OOrmuEbS7eg",
@@ -322,7 +298,7 @@
             "image": "https://img.youtube.com/vi/ovHFY2c5QKk/maxresdefault.jpg"
           },
           {
-            "title": "OST & uPort integration",
+            "title": "OST &amp; uPort integration",
             "project_url": "http://josephschiarizzi.com/2018/08/OST-hackathon-Finale/",
             "video_embed": "https://www.youtube.com/embed/se558olXegc",
             "image": "https://img.youtube.com/vi/se558olXegc/maxresdefault.jpg"
@@ -355,7 +331,7 @@
             "title": "Friendio",
             "project_url": "https://medium.com/@Munudun/alpha-phase-iii-lite-wallet-integration-with-friendio-week-4-challenge-6c7043f0745",
             "video_embed": "https://www.youtube.com/embed/CbLG3Kx2NUw",
-            "image": "https://img.youtube.com/vi/CbLG3Kx2NUw/maxresdefault.jpg"
+            "image": "https://img.youtube.com/vi/CbLG3Kx2NUw/mqdefault.jpg"
           },
           {
             "title": "Git Paid",
@@ -500,18 +476,6 @@
             "project_url": "https://medium.com/@HoneyThakuria/social-crowd-fund-ost-challenge-final-blog-23363af31d00",
             "video_embed": "https://www.youtube.com/embed/3dzkrYKWLCk",
             "image": "https://img.youtube.com/vi/3dzkrYKWLCk/mqdefault.jpg"
-          },
-          {
-            "title": "Employees Loyalty Program - QPAXX Solutions",
-            "project_url": "https://medium.com/@trapdoor1975/ost-alpha-iii-developers-challenge-final-submission-7581f65818b4",
-            "video_embed": "https://www.youtube.com/embed/IViJzxF5Fvo",
-            "image": "https://img.youtube.com/vi/IViJzxF5Fvo/maxresdefault.jpg"
-          },
-          {
-            "title": "Firmament",
-            "project_url": "https://medium.com/@stefanlh/firmament-ost-kit-alpha-phase-iii-finished-e3017ca1721c",
-            "video_embed": "https://www.youtube.com/embed/m5-n1mspU8k",
-            "image": "https://img.youtube.com/vi/m5-n1mspU8k/maxresdefault.jpg"
           },
           {
             "title": "ERC20 Droid",
