videos and news

--- a/app/views/web/ost/alpha3winners/_poc_videos.erb
+++ b/app/views/web/ost/alpha3winners/_poc_videos.erb
@@ -331,7 +331,7 @@
             "title": "Friendio",
             "project_url": "https://medium.com/@Munudun/alpha-phase-iii-lite-wallet-integration-with-friendio-week-4-challenge-6c7043f0745",
             "video_embed": "https://www.youtube.com/embed/CbLG3Kx2NUw",
-            "image": "https://img.youtube.com/vi/CbLG3Kx2NUw/mqdefault.jpg"
+            "image": "https://img.youtube.com/vi/CbLG3Kx2NUw/maxresdefault.jpg"
           },
           {
             "title": "Git Paid",
@@ -512,6 +512,78 @@
             "project_url": "https://medium.com/@prasannadhavale.competitions/ost-kit-%CE%B1-phase-iii-final-blogpost-weekly-update-four-8b9d6d6375c2",
             "video_embed": "https://www.youtube.com/embed/PsEsxrYYUeM",
             "image": "https://img.youtube.com/vi/PsEsxrYYUeM/mqdefault.jpg"
+          },
+          {
+            "title": "kwanda",
+            "project_url": "https://medium.com/kwanda/phase-iii-week-4-were-done-5b5ae6753041",
+            "video_embed": "https://www.youtube.com/embed/O7VDSppuL1Q",
+            "image": "https://img.youtube.com/vi/O7VDSppuL1Q/mqdefault.jpg"
+          },
+          {
+            "title": "Ciis (Corporate Insurance)",
+            "project_url": "https://medium.com/@snippet7/ost-alpha-iii-final-update-ciis-coin-992c9771cd57",
+            "video_embed": "https://www.youtube.com/embed/kemYEXKKRWM",
+            "image": "https://img.youtube.com/vi/kemYEXKKRWM/maxresdefault.jpg"
+          },
+          {
+            "title": "Mazeslider",
+            "project_url": "https://medium.com/@lukebugbee7/ost-alpha-phase-iii-final-blog-post-update-4-mazeslider-784df2577af",
+            "video_embed": "https://www.youtube.com/embed/78q3tX-Tw1c",
+            "image": "https://img.youtube.com/vi/78q3tX-Tw1c/mqdefault.jpg"
+          },
+          {
+            "title": "Cryptoize",
+            "project_url": "https://medium.com/@ansonlautszhing/cryptoize-ost-final-blog-beab37349746",
+            "video_embed": "https://www.youtube.com/embed/pr6hlFMgOlw",
+            "image": "https://img.youtube.com/vi/pr6hlFMgOlw/maxresdefault.jpg"
+          },
+          {
+            "title": "Marble",
+            "project_url": "https://medium.com/@gregoryspragginsjr/alpha-iii-retrospect-and-submission-c251e124da9",
+            "video_embed": "https://www.youtube.com/embed/8czhUfcBw7Y",
+            "image": "https://img.youtube.com/vi/8czhUfcBw7Y/maxresdefault.jpg"
+          },
+          {
+            "title": "Reward Culture",
+            "project_url": "https://medium.com/@trung.ngvan/reward-culture-an-experiment-with-tokenised-economy-based-on-the-ost-blockchain-toolkit-part-2-115887b1b6cd",
+            "video_embed": "https://www.youtube.com/embed/zGo6oS0411k",
+            "image": "https://img.youtube.com/vi/zGo6oS0411k/maxresdefault.jpg"
+          },
+          {
+            "title": "Daoist",
+            "project_url": "https://medium.com/@dfalkman/ost-a3-finished-the-daoist-b8abaedb1ed3",
+            "video_embed": "https://www.youtube.com/embed/NbsH7fgaRic",
+            "image": "https://img.youtube.com/vi/NbsH7fgaRic/maxresdefault.jpg"
+          },
+          {
+            "title": "Terminal Market System",
+            "project_url": "https://medium.com/@laderks7/final-update-ost-vtt-coin-alpha-iii-a1e92c85f218",
+            "video_embed": "https://www.youtube.com/embed/c9yRubJQPgI",
+            "image": "https://img.youtube.com/vi/c9yRubJQPgI/maxresdefault.jpg"
+          },
+          {
+            "title": "GrindTracker",
+            "project_url": "https://medium.com/@aniznik13/grind-tracker-the-journey-of-an-ost-alpha-iii-poc-project-final-update-be60589eb518",
+            "video_embed": "https://www.youtube.com/embed/7q4DTitMlnI",
+            "image": "https://img.youtube.com/vi/7q4DTitMlnI/maxresdefault.jpg"
+          },
+          {
+            "title": "Put Simply",
+            "project_url": "https://medium.com/@PutSimply/ost-alpha-iii-final-development-update-bfcac6c94363",
+            "video_embed": "https://www.youtube.com/embed/1s-HQRD9z-I",
+            "image": "https://img.youtube.com/vi/1s-HQRD9z-I/maxresdefault.jpg"
+          },
+          {
+            "title": "Shopify Credits Coin",
+            "project_url": "https://medium.com/@cryptokakoi/tokenize-shopify-yes-you-can-ost-alphaiii-1fc613d4576b",
+            "video_embed": "https://www.youtube.com/embed/UzkAMwIke4g",
+            "image": "https://img.youtube.com/vi/UzkAMwIke4g/maxresdefault.jpg"
+          },
+          {
+            "title": "Kobogo",
+            "project_url": "https://medium.com/kobogo-ost/osta3-weekly-update-4-kobogo-da9afec22225",
+            "video_embed": "https://www.youtube.com/embed/v9JaaWv7LTY",
+            "image": "https://img.youtube.com/vi/v9JaaWv7LTY/maxresdefault.jpg"
           }
         ]
       );
