POC video list changes

--- a/app/views/web/ost/alpha3winners/_poc_videos.erb
+++ b/app/views/web/ost/alpha3winners/_poc_videos.erb
@@ -298,7 +298,7 @@
             "image": "https://img.youtube.com/vi/ovHFY2c5QKk/maxresdefault.jpg"
           },
           {
-            "title": "OST &amp; uPort integration",
+            "title": "OST & uPort integration",
             "project_url": "http://josephschiarizzi.com/2018/08/OST-hackathon-Finale/",
             "video_embed": "https://www.youtube.com/embed/se558olXegc",
             "image": "https://img.youtube.com/vi/se558olXegc/maxresdefault.jpg"
@@ -430,10 +430,10 @@
             "image": "https://img.youtube.com/vi/xD9D3et4m9g/maxresdefault.jpg"
           },
           {
-            "title": "VTT Coin",
-            "project_url": "https://medium.com/@laderks7/final-update-ost-vtt-coin-alpha-iii-a1e92c85f218",
-            "video_embed": "https://www.youtube.com/embed/c9yRubJQPgI",
-            "image": "https://img.youtube.com/vi/c9yRubJQPgI/maxresdefault.jpg"
+            "title": "Belgrade Hangover",
+            "project_url": "https://medium.com/@jovan.bhc/ost-kit-alpha-phase-iii-poc-final-update-4-project-belgrade-hangover-347a956c98a0",
+            "video_embed": "https://www.youtube.com/embed/DfhnyfZWn40",
+            "image": "https://img.youtube.com/vi/DfhnyfZWn40/mqdefault.jpg"
           },
           {
             "title": "Tokensent",
