--- a/app/views/web/ost/alpha3winners/_poc_videos.erb
+++ b/app/views/web/ost/alpha3winners/_poc_videos.erb
@@ -34,7 +34,7 @@
             <div class="check-project-wrapper p-2">
               {{#if project_url}}
               <div class="check-project pt-2">
-                <a href="{{project_url}}" target="_blank" class="text-uppercase">Check the Project here</a>
+                <a href="{{project_url}}" rel="noopener noreferrer nofollow" target="_blank" class="text-uppercase">Check the Project here</a>
               </div>
               {{/if}}
             </div>
